--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+lib/
 
 # Created by https://www.gitignore.io/api/node,macos,windows,webstorm,sublimetext,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,macos,windows,webstorm,sublimetext,visualstudiocode
