--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@evilkanoa/react-month-calendar",
+  "name": "@evilkanoa/react-week-calendar",
   "version": "0.0.3",
-  "description": "Barebones and easy to use monthly calendar for any React page!",
-  "main": "lib/ReactMonthCalendar.js",
+  "description": "Barebones and easy to use weekly calendar for any React page!",
+  "main": "lib/ReactWeekCalendar.js",
   "private": false,
   "author": "evilkanoa",
   "license": "MIT",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Evilkanoa/react-month-calendar"
+    "url": "https://github.com/Evilkanoa/react-week-calendar"
   },
   "engines": {
     "node": "12.x",
@@ -54,7 +54,6 @@
     "jest": "^25.1.0",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
-    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "path": "^0.12.7",
     "prettier": "^1.19.1",
@@ -62,6 +61,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
